SERVER-18213: Retry insert in case of a write conflict during multi-upsert